syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc";  // .proto 파일로 생성될 클래스 파일이 위치할 패키지명
option java_outer_classname = "FinancialDataServiceProto";

// 서비스 정의
service FinancialDataService {
    rpc GetStockPrice (StockRequest) returns (StockResponse);
}

// 메시지 정의
message StockRequest {
    string symbol = 1;
}

message StockResponse {
    string symbol = 1;
    float price = 2;
    string timestamp = 3;
}
